resolve issue with live player having horizontal scroll bar on mobile

--- a/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
+++ b/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
@@ -274,7 +274,7 @@ category: Components
 
 // live player area
 .live-player__container {
-	overflow: auto;
+	overflow: hidden;
 	@include bp(medium) {
 		padding: 20px 0 0;
 		overflow: visible;
